--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
   "eslint.autoFixOnSave": true,
   "eslint.validate": [
     {
-      "language": "vue",
+      "language": "html",
       "autoFix": true
     },
     {
@@ -13,7 +13,11 @@
     {
       "language": "javascriptreact",
       "autoFix": true
-    }
+    },
+    {
+      "language": "vue",
+      "autoFix": true
+    },
   ],
   "vetur.validation.template": false
 }
