--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,9 @@
       "autoFix": true
     },
   ],
-  "vetur.validation.template": false
+  "vetur.validation.template": false,
+  "cSpell.ignoreWords": [
+    "djsh",
+    "jcoj"
+  ]
 }
